--- a/random_nn.ipynb
+++ b/random_nn.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "random_nn.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/y-oda2/ml-jhu-hepth/blob/master/random_nn.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -48,11 +37,11 @@
         "colab": {}
       },
       "source": [
-        "train_images_random = np.random.normal(0,1,(1000,28,28))\n",
-        "train_labels_random = np.random.normal(0,1,(1000,2))\n",
+        "train_data = np.random.normal(0,1,(10000,28,28))\n",
+        "train_labels = np.random.normal(0,1,(10000,2))\n",
         "\n",
-        "test_images_random = np.random.normal(0,1,(100,28,28))\n",
-        "test_labels_random = np.random.normal(0,1,(100,2))\n"
+        "test_data = np.random.normal(0,1,(1000,28,28))\n",
+        "test_labels = np.random.normal(0,1,(1000,2))\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -68,7 +57,9 @@
         "model = keras.models.Sequential([\n",
         "  keras.layers.Flatten(input_shape=(28, 28)),\n",
         "\tkeras.layers.Dense(32, activation='relu'),\n",
-        "  keras.layers.Dense(64, activation='relu'), \n",
+        "  keras.layers.Dense(64, activation='relu'),\n",
+        "  keras.layers.Dense(128, activation='relu'),\n",
+        "  keras.layers.Dense(64, activation='relu'),  \n",
         "  keras.layers.Dense(32, activation='relu'),\n",
         "\tkeras.layers.Dense(2, activation='softmax')\n",
         "\t])\n",
@@ -87,27 +78,29 @@
           "base_uri": "https://localhost:8080/",
           "height": 225
         },
-        "outputId": "0fa4461f-f1bc-4514-f9b6-953b7e93dad8"
+        "outputId": "522d3906-eb97-4604-a95f-bb5398492aee"
       },
       "source": [
-        "model.fit(train_images_random, train_labels_random, epochs=5)"
+        "model.fit(train_data, train_labels, epochs=5)\n",
+        "\n",
+        "model.evaluate(test_data, test_labels,verbose=0)"
       ],
-      "execution_count": 160,
+      "execution_count": 187,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 1000 samples\n",
+            "Train on 10000 samples\n",
             "Epoch 1/5\n",
-            "1000/1000 [==============================] - 0s 372us/sample - loss: 1.2826 - acc: 0.4720\n",
+            "10000/10000 [==============================] - 1s 149us/sample - loss: 0.9746 - acc: 0.8526\n",
             "Epoch 2/5\n",
-            "1000/1000 [==============================] - 0s 147us/sample - loss: 1.1444 - acc: 0.7290\n",
+            "10000/10000 [==============================] - 1s 150us/sample - loss: 0.9541 - acc: 0.8812\n",
             "Epoch 3/5\n",
-            "1000/1000 [==============================] - 0s 131us/sample - loss: 1.0631 - acc: 0.7970\n",
+            "10000/10000 [==============================] - 2s 152us/sample - loss: 0.9439 - acc: 0.8966\n",
             "Epoch 4/5\n",
-            "1000/1000 [==============================] - 0s 136us/sample - loss: 0.9936 - acc: 0.8720\n",
+            "10000/10000 [==============================] - 2s 157us/sample - loss: 0.9384 - acc: 0.9068\n",
             "Epoch 5/5\n",
-            "1000/1000 [==============================] - 0s 130us/sample - loss: 0.9487 - acc: 0.9170\n"
+            "10000/10000 [==============================] - 2s 154us/sample - loss: 0.9335 - acc: 0.9143\n"
           ],
           "name": "stdout"
         },
@@ -115,43 +108,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7fe47ba4af28>"
+              "[1.4128111400604249, 0.501]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 160
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "89hvDm2WLsE2",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "49310029-1883-44dc-9718-25ae9670368a"
-      },
-      "source": [
-        "model.evaluate(test_images_random, test_labels_random,verbose=0)"
-      ],
-      "execution_count": 162,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[1.5197480583190919, 0.47]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 162
+          "execution_count": 187
         }
       ]
     },
@@ -160,38 +123,14 @@
       "metadata": {
         "id": "Z1tr9sW8Ofek",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 173
-        },
-        "outputId": "769eab67-a0cd-45fb-cfe0-190c74066210"
+        "colab": {}
       },
       "source": [
-        "model.predict(test_images_random[1:10])"
+        "X = np.random.normal(0,1,(10000,28,28))\n",
+        "y = model.predict(X)"
       ],
-      "execution_count": 163,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.48721164, 0.51278836],\n",
-              "       [0.7392031 , 0.26079687],\n",
-              "       [0.1430041 , 0.8569959 ],\n",
-              "       [0.07478594, 0.9252141 ],\n",
-              "       [0.1213995 , 0.87860054],\n",
-              "       [0.84384745, 0.15615258],\n",
-              "       [0.03259537, 0.9674046 ],\n",
-              "       [0.5760903 , 0.42390972],\n",
-              "       [0.55418974, 0.4458103 ]], dtype=float32)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 163
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -200,46 +139,53 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 225
         },
-        "outputId": "003128ab-524b-4f45-838f-f6382f0355ab"
+        "outputId": "2659b943-fc24-4091-8007-3e0ab5c8d523"
       },
       "source": [
-        "model2 = keras.models.Sequential([\n",
+        "model_small = keras.models.Sequential([\n",
         "  keras.layers.Flatten(input_shape=(28, 28)),\n",
-        "\tkeras.layers.Dense(32, activation='relu'),\n",
-        "  keras.layers.Dense(64, activation='relu'),\n",
-        "  keras.layers.Dense(128, activation='relu'),\n",
-        "  keras.layers.Dense(64, activation='relu'),  \n",
-        "  keras.layers.Dense(32, activation='relu'),\n",
+        "\tkeras.layers.Dense(6, activation='relu'),\n",
         "\tkeras.layers.Dense(2, activation='softmax')\n",
         "\t])\n",
         "\n",
-        "model2.compile(optimizer='adam', loss='mean_squared_error', metrics=['accuracy'])\n",
+        "model_small.compile(optimizer='adam', loss='mean_squared_error', metrics=['accuracy'])\n",
         "\n",
-        "model2.predict(train_images_random[1:10])"
+        "model_small.fit(X, y, epochs=5)\n",
+        "\n",
+        "model_small.evaluate(test_data, test_labels, verbose=0)"
       ],
-      "execution_count": 164,
+      "execution_count": 190,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Train on 10000 samples\n",
+            "Epoch 1/5\n",
+            "10000/10000 [==============================] - 2s 166us/sample - loss: 0.1828 - acc: 0.5250\n",
+            "Epoch 2/5\n",
+            "10000/10000 [==============================] - 1s 122us/sample - loss: 0.1314 - acc: 0.6359\n",
+            "Epoch 3/5\n",
+            "10000/10000 [==============================] - 1s 124us/sample - loss: 0.1181 - acc: 0.6829\n",
+            "Epoch 4/5\n",
+            "10000/10000 [==============================] - 1s 122us/sample - loss: 0.1098 - acc: 0.7054\n",
+            "Epoch 5/5\n",
+            "10000/10000 [==============================] - 1s 124us/sample - loss: 0.1031 - acc: 0.7293\n"
+          ],
+          "name": "stdout"
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0.48992476, 0.5100752 ],\n",
-              "       [0.5011714 , 0.49882856],\n",
-              "       [0.52045095, 0.47954905],\n",
-              "       [0.47097117, 0.52902883],\n",
-              "       [0.5690843 , 0.4309157 ],\n",
-              "       [0.50478756, 0.4952124 ],\n",
-              "       [0.4657837 , 0.5342163 ],\n",
-              "       [0.50037795, 0.49962202],\n",
-              "       [0.5456714 , 0.45432857]], dtype=float32)"
+              "[1.3205431632995606, 0.482]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 164
+          "execution_count": 190
         }
       ]
     },
